Fix requirements repositories and adds supports to mariadb
Also, maps tomcat web.xml as a configmap so it can be easily changed

--- a/templates/configmaps.yaml
+++ b/templates/configmaps.yaml
@@ -20,6 +20,10 @@ data:
   DB_USER: {{ .Values.postgresql.postgresqlUsername | quote }}
   DB_HOST: "{{ .Release.Name }}-postgresql"
   DB_DATABASE: {{ .Values.postgresql.postgresqlDatabase | quote }}
+{{- else if .Values.mariadb.enabled }}
+  DB_USER: {{ .Values.mariadb.auth.username | quote }}
+  DB_HOST: "{{ .Release.Name }}-mariadb"
+  DB_DATABASE: {{ .Values.mariadb.auth.database | quote }}  
 {{- else }}
   DB_USER: {{ .Values.externalDB.user | quote }}
   DB_HOST: {{ .Values.externalDB.host | quote }}
