--- a/requirements.yaml
+++ b/requirements.yaml
@@ -1,9 +1,15 @@
 dependencies:
   - name: mysql
-    repository: https://kubernetes-charts.storage.googleapis.com
-    version: 1.4.0
+    repository: https://charts.helm.sh/stable
+    version: 1.6.9
     condition: mysql.enabled
+
   - name: postgresql
-    repository: https://kubernetes-charts.storage.googleapis.com
-    version: 7.6.0
+    repository: https://charts.helm.sh/stable
+    version: 5.3.7
     condition: postgresql.enabled
+
+  - name: mariadb
+    repository: https://charts.bitnami.com/bitnami
+    version: 9.3.11
+    condition: mariadb.enabled
