--- a/tests/secrets_test.yaml
+++ b/tests/secrets_test.yaml
@@ -5,7 +5,6 @@ tests:
   - it: should set values properly
     release:
       name: release
-      service: tiller
     asserts:
       - isKind:
           of: Secret
@@ -25,7 +24,7 @@ tests:
           value: release
       - equal:
           path: metadata.labels.heritage
-          value: Tiller
+          value: Helm
       - equal:
           path: type
           value: Opaque
