--- a/templates/configmaps.yaml
+++ b/templates/configmaps.yaml
@@ -3,32 +3,15 @@ kind: ConfigMap
 metadata:
   name: {{ template "fullname" . }}
   labels:
-    app: {{ template "fullname" . }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
-    release: {{ .Release.Name | quote }}
-    heritage: {{ .Release.Service | quote }}
+    {{- include "standard-labels" . | nindent 4 }}
 data:
 {{- if .Values.solr.enabled }}
   INDEX_HOST: {{ .Values.solr.host | quote  }}
   INDEX_PORT: {{ .Values.solr.port | quote  }}
 {{- end }}
-{{- if .Values.mysql.enabled }}
-  DB_USER: {{ .Values.mysql.mysqlUser | quote }}
-  DB_HOST: "{{ .Release.Name }}-mysql"
-  DB_DATABASE: {{ .Values.mysql.mysqlDatabase | quote }}
-{{- else if .Values.postgresql.enabled }}
-  DB_USER: {{ .Values.postgresql.postgresqlUsername | quote }}
-  DB_HOST: "{{ .Release.Name }}-postgresql"
-  DB_DATABASE: {{ .Values.postgresql.postgresqlDatabase | quote }}
-{{- else if .Values.mariadb.enabled }}
-  DB_USER: {{ .Values.mariadb.auth.username | quote }}
-  DB_HOST: "{{ .Release.Name }}-mariadb"
-  DB_DATABASE: {{ .Values.mariadb.auth.database | quote }}  
-{{- else }}
-  DB_USER: {{ .Values.externalDB.user | quote }}
-  DB_HOST: {{ .Values.externalDB.host | quote }}
-  DB_DATABASE: {{ .Values.externalDB.database | quote }}
-{{- end }}
+  DB_USER: {{ template "databaseUser" . }}
+  DB_HOST: {{ template "databaseHost" . }}
+  DB_DATABASE: {{ template "databaseDatabase" . }}
 # {{- range $key, $value := .Values.database }}
 #   {{ $key }}: {{ $value | indent 4 }}
 # {{- end }}
