--- a/templates/secrets.yaml
+++ b/templates/secrets.yaml
@@ -3,16 +3,7 @@ kind: Secret
 metadata:
   name: {{ template "fullname" . }}
   labels:
-    app: {{ template "fullname" . }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
-    release: {{ .Release.Name | quote }}
-    heritage: {{ .Release.Service | quote }}
+    {{- include "standard-labels" . | nindent 4 }}
 type: Opaque
 data:
-{{- if .Values.mysql.enabled }}
-  DB_PASSWORD: {{ .Values.mysql.mysqlPassword | b64enc | quote }}
-{{- else if .Values.postgresql.enabled }}
-  DB_PASSWORD: {{ .Values.postgresql.postgresqlPassword | b64enc | quote }}
-{{- else }}
-  DB_PASSWORD: {{ .Values.externalDB.password | b64enc | quote }}
-{{- end }}
+  DB_PASSWORD: {{ template "databasePassword" . }}
