--- a/tests/service_test.yaml
+++ b/tests/service_test.yaml
@@ -5,10 +5,13 @@ templates:
 tests:
   - it: should set values properly
     set:
+      mysql.enabled: true
+    set:
       service.type: ClusterIP
       service.externalPort: 80
       service.internalPort: 8080
       service.name: tcp
+      mysql.enabled: true
     release:
       name: release
     asserts:
@@ -22,6 +25,7 @@ tests:
       service.externalPort: 80
       service.internalPort: 8080
       service.name: tcp
+      mysql.enabled: true
     release:
       name: release
     asserts:
