--- a/tests/tomcat-configmap_test.yaml
+++ b/tests/tomcat-configmap_test.yaml
@@ -5,7 +5,6 @@ tests:
   - it: should set values properly
     release:
       name: release
-      service: tiller
     asserts:
       - isKind:
           of: ConfigMap
@@ -25,7 +24,7 @@ tests:
           value: release
       - equal:
           path: metadata.labels.heritage
-          value: Tiller
+          value: Helm
       - matchSnapshot:
           path: spec
   - it: should include web.xml contents
