--- a/templates/configmaps.yaml
+++ b/templates/configmaps.yaml
@@ -1,17 +1,17 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ template "xwiki.fullname" . }}
   labels:
-    {{- include "standard-labels" . | nindent 4 }}
+    {{- include "xwiki.standard-labels" . | nindent 4 }}
 data:
 {{- if .Values.solr.enabled }}
   INDEX_HOST: {{ .Values.solr.host | quote  }}
   INDEX_PORT: {{ .Values.solr.port | quote  }}
 {{- end }}
-  DB_USER: {{ template "databaseUser" . }}
-  DB_HOST: {{ template "databaseHost" . }}
-  DB_DATABASE: {{ template "databaseDatabase" . }}
+  DB_USER: {{ template "xwiki.databaseUser" . }}
+  DB_HOST: {{ template "xwiki.databaseHost" . }}
+  DB_DATABASE: {{ template "xwiki.databaseDatabase" . }}
 # {{- range $key, $value := .Values.database }}
 #   {{ $key }}: {{ $value | indent 4 }}
 # {{- end }}
