--- a/templates/secrets.yaml
+++ b/templates/secrets.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ template "xwiki.fullname" . }}
   labels:
-    {{- include "standard-labels" . | nindent 4 }}
+    {{- include "xwiki.standard-labels" . | nindent 4 }}
 type: Opaque
 data:
-  DB_PASSWORD: {{ template "databasePassword" . }}
+  DB_PASSWORD: {{ template "xwiki.databasePassword" . }}
