--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ template "xwiki.fullname" . }}
   labels:
-    {{- include "standard-labels" . | nindent 4 }}
+    {{- include "xwiki.standard-labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -13,4 +13,4 @@ spec:
     name: {{ .Values.service.name }}
   sessionAffinity: ClientIP
   selector:
-    app: {{ template "fullname" . }}
+    app: {{ template "xwiki.fullname" . }}
