--- a/values.yaml
+++ b/values.yaml
@@ -132,7 +132,7 @@ solr:
 
 # To use ingress for routing set ingress.enabled value to true and istio.enabled value to false
 ingress:
-  enabled: true
+  enabled: false
   annotations:
     kubernetes.io/ingress.class: nginx
   hostName:
