--- a/templates/xwiki-cfg-configmap.yaml
+++ b/templates/xwiki-cfg-configmap.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: xwiki-tomcat-conf
+  name: xwiki-cfg
   labels:
     {{- include "xwiki.standard-labels" . | nindent 4 }}
   annotations:
     timestamp: "{{ now | date "20060102150405" }}"    
 data:
-  web.xml: |
-{{ .Files.Get .Values.webXmlFile | indent 4}}
+  xwiki.cfg: |
+{{ .Files.Get .Values.xwikiCfgFile | indent 4}}
