--- a/templates/xwiki-properties-configmap.yaml
+++ b/templates/xwiki-properties-configmap.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: xwiki-tomcat-conf
+  name: xwiki-properties
   labels:
     {{- include "xwiki.standard-labels" . | nindent 4 }}
   annotations:
     timestamp: "{{ now | date "20060102150405" }}"    
 data:
-  web.xml: |
-{{ .Files.Get .Values.webXmlFile | indent 4}}
+  xwiki.properties: |
+{{ .Files.Get .Values.xwikiPropertiesFile | indent 4}}
