--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.ingress.enabled -}}
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ template "xwiki.fullname" . }}
@@ -14,9 +14,12 @@ spec:
   - http:
       paths:
       - path: /
+        pathType: ImplementationSpecific
         backend:
-          serviceName: {{ template "xwiki.fullname" . }}
-          servicePort: {{ .Values.service.externalPort }}
+          service:
+            name: {{ template "xwiki.fullname" . }}
+            port:
+              number: {{ .Values.service.externalPort }}
     {{- if .Values.ingress.hostName }}
     host: {{ .Values.ingress.hostName | quote }}
     {{- end -}}
