fix: update and fix tests to use quintush's fork
Update and fix the previously broken tests so that they're working as of
the latest version of quintush's helm-unittest fork.

--- a/tests/configmaps_test.yaml
+++ b/tests/configmaps_test.yaml
@@ -18,7 +18,7 @@ tests:
           value: release-xwiki
       - matchRegex:
           path: metadata.labels.chart
-          value: xwiki-*
+          pattern: xwiki-*
       - equal:
           path: metadata.labels.release
           value: release
