--- a/tests/ingress_test.yaml
+++ b/tests/ingress_test.yaml
@@ -16,6 +16,7 @@ tests:
     asserts:
       - isKind:
           of: Ingress
+        template: ingress.yaml
       - matchSnapshot:
           path: metadata.annotations
       - equal:
