--- a/tests/deployment_test.yaml
+++ b/tests/deployment_test.yaml
@@ -11,17 +11,22 @@ tests:
     asserts:
       - isKind:
           of: Deployment
+        documentIndex: 0
       - equal:
           path: spec.template.spec.containers[0].image
           value: default:latest
+        documentIndex: 0
       - matchSnapshot:
           path: spec.template.spec.containers[0].env
+        documentIndex: 0
       - matchRegex:
           path: metadata.labels.app
           pattern: default-*
+        documentIndex: 0
       - matchRegex:
           path: metadata.labels.app
           pattern: -latest
+        documentIndex: 0
   - it: should use mysql lts image
     set:
       image.tag: latest
@@ -29,20 +34,25 @@ tests:
     asserts:
       - isKind:
           of: Deployment
+        documentIndex: 0
       - equal:
           path: spec.template.spec.containers[0].image
           value: xwiki:lts-mysql-tomcat
+        documentIndex: 0
       - matchSnapshot:
           path: spec.template.spec.containers[0].env
+        documentIndex: 0
       - matchRegex:
           path: metadata.labels.app
           pattern: xwiki-*
       - matchRegex:
           path: metadata.labels.app
           pattern: -lts-mysql-tomcat
+        documentIndex: 0
       - equal:
           path: spec.template.spec.containers[0].env[1].valueFrom.secretKeyRef.key
           value: mysql-password
+        documentIndex: 0
   - it: should use postgres lts image
     set:
       image.tag: latest
@@ -50,20 +60,25 @@ tests:
     asserts:
       - isKind:
           of: Deployment
+        documentIndex: 0
       - equal:
           path: spec.template.spec.containers[0].image
           value: xwiki:lts-postgres-tomcat
+        documentIndex: 0
       - matchSnapshot:
           path: spec.template.spec.containers[0].env
+        documentIndex: 0
       - matchRegex:
           path: metadata.labels.app
           pattern: xwiki-*
       - matchRegex:
           path: metadata.labels.app
           pattern: -lts-postgresql-tomcat
+        documentIndex: 0
       - equal:
           path: spec.template.spec.containers[0].env[1].valueFrom.secretKeyRef.key
           value: postgresql-password
+        documentIndex: 0
   - it: should use mysql lts image when mariadb is specified as it is compatible with mysql
     set:
       image.tag: latest
@@ -71,20 +86,25 @@ tests:
     asserts:
       - isKind:
           of: Deployment
+        documentIndex: 0
       - equal:
           path: spec.template.spec.containers[0].image
           value: xwiki:lts-mysql-tomcat
+        documentIndex: 0
       - matchSnapshot:
           path: spec.template.spec.containers[0].env
+        documentIndex: 0
       - matchRegex:
           path: metadata.labels.app
           pattern: xwiki-*
       - matchRegex:
           path: metadata.labels.app
           pattern: -lts-mariadb-tomcat
+        documentIndex: 0
       - equal:
           path: spec.template.spec.containers[0].env[1].valueFrom.secretKeyRef.key
           value: mariadb-password
+        documentIndex: 0
   - it: should properly set value
     set:
       image.pullPolicy: IfNotPresent
@@ -94,34 +114,45 @@ tests:
       - equal:
           path: metadata.name
           value: RELEASE-NAME-xwiki
+        documentIndex: 0
       - equal:
           path: spec.template.spec.containers[0].imagePullPolicy
           value: IfNotPresent
+        documentIndex: 0
       - equal:
           path: spec.template.spec.containers[0].ports[0].containerPort
           value: 8080
+        documentIndex: 0
       - equal:
           path: spec.template.spec.containers[0].volumeMounts[0].name
           value: xwiki-data
+        documentIndex: 0
       - equal:
           path: spec.template.spec.volumes[0].name
           value: xwiki-solr-data
+        documentIndex: 0
       - equal:
           path: spec.template.spec.volumes[0].persistentVolumeClaim.claimName
           value: xwiki-solr
+        documentIndex: 0
       - equal:
           path: spec.template.spec.containers[0].volumeMounts[1].name
           value: xwiki-solr-data
+        documentIndex: 0
       - equal:
           path: spec.template.spec.containers[0].volumeMounts[2].name
           value: xwiki-tomcat-conf
+        documentIndex: 0
       - equal:
           path: spec.template.spec.containers[0].volumeMounts[2].mountPath
           value: /usr/local/tomcat/conf/web.xml
+        documentIndex: 0
       - matchSnapshot:
           path: spec.template.spec.containers[0].volumeMounts
+        documentIndex: 0
       - matchSnapshot:
           path: spec.template.spec.volumes
+        documentIndex: 0
   - it: should properly set value for xwiki pvc
     set:
       mysql.enabled: true
@@ -151,4 +182,3 @@ tests:
           path: metadata.name
           value: xwiki-solr
         documentIndex: 2
-
