--- a/tests/secrets_test.yaml
+++ b/tests/secrets_test.yaml
@@ -1,4 +1,4 @@
-suite: test configmaps
+suite: test secrets
 templates:
   - secrets.yaml
 tests:
@@ -18,7 +18,7 @@ tests:
           value: release-xwiki
       - matchRegex:
           path: metadata.labels.chart
-          value: xwiki-*
+          pattern: xwiki-*
       - equal:
           path: metadata.labels.release
           value: release
