--- a/tests/ingress_test.yaml
+++ b/tests/ingress_test.yaml
@@ -1,29 +1,96 @@
-suite: test ingress
+suite: Ingress
+
 templates:
   - ingress.yaml
-  - service.yaml
+
 tests:
-  - it: should set values properly
+  - it: follows apiVersion networking.k8s.io/v1 for K8s >= 1.19
+    capabilities:
+      majorVersion: 1
+      minorVersion: 20
     set:
-      annotations.kubernetes.io/ingress.class: nginx
-      service.type: ClusterIP
-      service.externalPort: 80
-      service.internalPort: 8080
-      service.name: tcp
       ingress.enabled: true
-    release:
-      name: release
     asserts:
-      - isKind:
-          of: Ingress
-        template: ingress.yaml
-      - matchSnapshot:
-          path: metadata.annotations
       - equal:
-          path: metadata.name
-          value: release-xwiki
-      - matchRegex:
-          path: metadata.labels.chart
-          pattern: xwiki-*
-      - matchSnapshot:
-          path: spec
+          path: apiVersion
+          value: networking.k8s.io/v1
+      - isNotEmpty:
+          path: spec.rules[0].http.paths[0].backend.service.name
+      - isNotEmpty:
+          path: spec.rules[0].http.paths[0].backend.service.port.number
+
+  - it: follows apiVersion networking.k8s.io/v1beta1 for K8s >= 1,14, < 1.19
+    capabilities:
+      majorVersion: 1
+      minorVersion: 14
+    set:
+      ingress.enabled: true
+    asserts:
+      - equal:
+          path: apiVersion
+          value: networking.k8s.io/v1beta1
+      - isNotEmpty:
+          path: spec.rules[0].http.paths[0].backend.serviceName
+      - isNotEmpty:
+          path: spec.rules[0].http.paths[0].backend.servicePort
+
+  - it: follows apiVersion extensions/v1beta1 for K8s < 1.14
+    capabilities:
+      majorVersion: 1
+      minorVersion: 13
+    set:
+      ingress.enabled: true
+    asserts:
+      - equal:
+          path: apiVersion
+          value: extensions/v1beta1
+      - isNotEmpty:
+          path: spec.rules[0].http.paths[0].backend.serviceName
+      - isNotEmpty:
+          path: spec.rules[0].http.paths[0].backend.servicePort
+
+  - it: does not set ingress rule host by default
+    set:
+      ingress.enabled: true
+    asserts:
+      - isEmpty:
+          path: spec.rules[0].host
+
+  - it: sets ingress rule host when hostname is set in release values
+    set:
+      ingress:
+        enabled: true
+        hostName: example.com
+    asserts:
+      - equal:
+          path: spec.rules[0].host
+          value: example.com
+
+  - it: sets tls configuration as added in release values
+    set:
+      ingress:
+        enabled: true
+        tls:
+          foo: bar
+          fizz: buzz
+    asserts:
+      - equal:
+          path: spec.tls
+          value:
+            foo: bar
+            fizz: buzz
+
+  - it: sets annotations when included in the release values
+    set:
+      ingress:
+        enabled: true
+        annotations:
+          foo: bar
+          fizz: buzz
+    asserts:
+      - equal:
+          path: metadata.annotations.foo
+          value: bar
+      - equal:
+          path: metadata.annotations.fizz
+          value: buzz
