test: revamp secret tests & eliminate snapshot
Revamp unit tests for the Secret template and eliminate its reliance on
snapshots, since those are simply unreliable.

--- a/tests/secrets_test.yaml
+++ b/tests/secrets_test.yaml
@@ -1,8 +1,21 @@
-suite: test secrets
+suite: Secret
+
 templates:
   - secrets.yaml
+
 tests:
-  - it: should set values properly
+  - it: sets recommended labels according to release name
+    release:
+      name: example-release
+    asserts:
+      - equal:
+          path: metadata.labels.app
+          value: example-release-xwiki
+      - equal:
+          path: metadata.labels.release
+          value: example-release
+
+  - it: properly sets resource metadata & type
     release:
       name: release
     asserts:
@@ -28,27 +41,47 @@ tests:
       - equal:
           path: type
           value: Opaque
-  - it: should set mysql secret values
+
+  - it: sets MariaDB password when engine is MariaDB (pref. MariaDB > MySQL > PostgresQL)
     set:
-      mysql.mysqlPassword: xwikip
+      mariadb.auth.password: example.password-mariadb
+      mariadb.enabled: true
       mysql.enabled: true
       postgresql.enabled: true
     asserts:
-      - matchSnapshot:
+      - equal:
           path: data.DB_PASSWORD
-  - it: should set postgres secret values
+          value: example.password-mariadb
+
+  - it: sets MySQL password when engine is MySQL (pref. MariaDB > MySQL > PostgresQL)
     set:
-      postgresql.postgresqlPassword: xwikip
+      mysql.mysqlPassword: example.password-mysql
+      mariadb.enabled: false
+      mysql.enabled: true
+      postgresql.enabled: true
+    asserts:
+      - equal:
+          path: data.DB_PASSWORD
+          value: example.password-mysql
+
+  - it: sets Postgres password when engine is Postgres (pref. MariaDB > MySQL > PostgresQL)
+    set:
+      postgresql.postgresqlPassword: example.password-postgres
+      mariadb.enabled: false
       mysql.enabled: false
       postgresql.enabled: true
     asserts:
-      - matchSnapshot:
+      - equal:
           path: data.DB_PASSWORD
-  - it: should set externalDB secret values
+          value: example.password-postgres
+
+  - it: sets external DB password when no other engine is selected
     set:
-      externalDB.password: xwikip
+      externalDB.password: example.password-external
+      mariadb.enabled: false
       mysql.enabled: false
       postgresql.enabled: false
     asserts:
-      - matchSnapshot:
+      - equal:
           path: data.DB_PASSWORD
+          value: example.password-external
