--- a/tests/gateway_test.yaml
+++ b/tests/gateway_test.yaml
@@ -1,40 +1,15 @@
-suite: test istio gateway
+suite: Istio
+
 templates:
   - gateway.yaml
-tests:
-  - it: should set values properly of Gateway
-    set:
-      istio.enabled: true
-    release:
-      name: release
-    asserts:
-      - isKind:
-          of: Gateway
-        documentIndex: 0
-      - isAPIVersion:
-          of: networking.istio.io/v1alpha3
-      - equal:
-          path: metadata.name
-          value: xwiki-gateway
-        documentIndex: 0
-      - matchSnapshot:
-          path: spec
-  - it: should properly set value of VirtualService
-    set:
-      service.externalPort: 80
-      istio.enabled: true
-    asserts:
-      - isKind:
-          of: VirtualService
-        documentIndex: 1
-      - isAPIVersion:
-          of: networking.istio.io/v1alpha3
-        documentIndex: 1
-      - equal:
-          path: metadata.name
-          value: xwiki
-        documentIndex: 1
-      - matchSnapshot:
-          path: spec
-        documentIndex: 1
 
+tests:
+  - it: points VirtualService to Service's external port
+    set:
+      service.externalPort: 1234
+      istio.enabled: true
+    asserts:
+      - documentIndex: 1
+        equal:
+          path: spec.http[0].route[0].destination.port.number
+          value: 1234
